Serious improvements in security, sanitization, data labeling, etc Big improvement to state management, mcp initialization and compliance with MCP protocol Completely revamped README and INSTALL guides Added character set and encoding information for the database Added date/time and timezone information for the database Added SQL dialect guidance to the model Added db specific data dictionary info Improved javadoc